# copilot-hackathon-challenges

./: .gitignore  Challenge-3.md  package-lock.json  project-generator.bash
Challenge-1/: .gitignore  README.md  app.py  test_app.py
ai-fitness-coach/: README.md  app.js  package-lock.json  package.json
ai-fitness-coach/controllers/: nutritionController.js  progressController.js  workoutController.js
ai-fitness-coach/data/: users.json
ai-fitness-coach/routes/: nutritionRoutes.js  progressRoutes.js  workoutRoutes.js
ai-fitness-coach/services/: nutritionService.js  progressService.js  workoutService.js
challenge-3/: pom.xml
challenge-4/: start.ps1
challenge-5/: README.md  app.py  document.md  requirements.txt
challenge-5/templates/: index.html  result.html
challenge-5/tests/: test_app.py
challenge2/: README.md  app.py  test_app.py
challenge3/: README.md  app.py  requirements.txt  test_app.py
eldoria/: app.py
product-api/: .env  app.js  package-lock.json  package.json  seed.js  server.js
product-api/controllers/: itemController.js
product-api/models/: Item.js
product-api/public/: index.html  script.js  styles.css
product-api/routes/: itemRoutes.js
product-api/tests/: item.test.js
sensor-alert-project/: .gitignore  MANIFEST.in  README.md  copilot_interactions.md  extreme_anomaly.csv  normal_readings.csv  requirements.txt  run_script.py  sample_data.csv  setup.py
tempora/: app.py
tempora-clock-sync/: CMakeLists.txt  README.md
tempora-clock-sync/src/: ClockSynchronizer.cpp  ClockSynchronizer.h  main.cpp
(+35 files in other folders)
